<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.CollapsingToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:contentScrim="@color/colorPrimary"
    app:expandedTitleMarginEnd="64dp"
    app:expandedTitleMarginStart="48dp"
    app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <FrameLayout
        android:id="@+id/containerImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_collapseMode="parallax"
        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/imgAvatarDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person" />

        <LinearLayout
            android:id="@+id/containerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="#4D000000"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_user"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:drawablePadding="4dp"
                    android:text="@string/dummy_int_value"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_people_alt_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/followers"

                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/dummy_int_value"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</com.google.android.material.appbar.CollapsingToolbarLayout>