<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/name_user"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toTopOf="@+id/imgUser" />

        <ImageButton
            android:id="@+id/btnOpenDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/roundcorner"
            android:contentDescription="@string/detail"
            android:padding="8dp"
            android:src="@drawable/ic_detail_user"
            app:layout_constraintBottom_toBottomOf="@id/imgUser"
            app:layout_constraintEnd_toStartOf="@id/btnOpenRepo" />

        <ImageButton
            android:id="@+id/btnOpenRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/roundcorner"
            android:contentDescription="@string/repo"
            android:padding="8dp"
            android:src="@drawable/ic_repository"
            android:text="@string/repo"
            app:layout_constraintBottom_toBottomOf="@id/imgUser"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>